# portfolio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.rst  Pipfile  README.md  README.rst  __init__.py  app.py  cli.py  interactive.py  portfolio.bat  portfolio.ini  portfolio.py  pyproject.toml  report.py  requirements.txt  setup.py
docs/: conf.py  index.rst  license.rst  portfolio.rst  readme.rst  requirements.txt  usage.rst
portfolio/: __init__.py  account.py  app.py  cli.py  config.py  interactive.py  log.py  logging.py  portfolio.py  report.py
portfolio/templates/email/: account.html  account.txt  plain.txt  portfolio.html  portfolio.txt
templates/email/: html.html  plain.txt
tests/: conftest.py  context.py  test-account.py  test_account.py  test_cli.py  test_config.ini  test_portfolio.py  test_report.py
