[tool.poetry]
name = "portfolio"
description = "Package for tracking and reporting on a stock portfolio."
version = "v1.4.0"
authors = ["ThomasStivers <thomas.stivers@gmail.com>"]
license = "GPL"
include = ["templates/*"]
packages = [
{ include = "portfolio"}
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.4"
Jinja2 = "^2.11.2"
pandas-datareader = "^0.9.0"
numpy = "^1.19.3"
matplotlib = "^3.3.3"
openpyxl = "^3.0.5"
setuptools = "^51.0.0"
pyarrow = "^4.0.1"
setuptools-scm = "^6.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.9.2"
Sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
sphinx-argparse = "^0.2.5"
pytest = "^6.1.2"
twine = "^3.2.0"

[tool.poetry.scripts]
portfolio = "portfolio.app:main"

[tool.setuptools_scm]
write_to = "portfolio/version.py"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "poetry.core.masonry.api"
